package devOps.enums;

public enum TypeBibliotheque {
    PUBLIQUE,
    UNIVERSITAIRE
}
