@startuml DevOps_ClassDiagram_Metier

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam linetype ortho

' =========================
' ENUMS
' =========================
enum TypeBibliotheque {
  PUBLIQUE
  UNIVERSITAIRE
}

enum TypeNotification {
  FERMETURE_BIBLIOTHEQUE
  AFFLUENCE_FAIBLE
  LIVRE_DISPONIBLE
  NOUVELLE_BIBLIOTHEQUE
  RECOMMANDATION
}

' =========================
' ENTITES METIER
' =========================
class Utilisateur {
  id : Long
  username : String
  email : String
}

class Bibliotheque {
  id : Long
  nom : String
  adresse : String
  latitude : Double
  longitude : Double
  type : TypeBibliotheque
  noteGlobale : Double
}

class Horaire {
  id : Long
  jourSemaine : String
  heureOuverture : LocalTime
  heureFermeture : LocalTime
}

class Publication {
  id : Long
  contenu : String
  dateCreation : LocalDateTime
}

class Commentaire {
  id : Long
  contenu : String
  dateCreation : LocalDateTime
}

class Notation {
  id : Long
  note : Integer
  commentaire : String
  dateNotation : LocalDate
}

class Favori {
  id : Long
  dateAjout : LocalDateTime
}

class Notification {
  id : Long
  type : TypeNotification
  titre : String
  message : String
  lue : Boolean
  dateCreation : LocalDateTime
}

class Session {
  id : Long
  objectif : String
  dureeMinutes : Integer
  completee : Boolean
  dateDebut : LocalDateTime
  dateFin : LocalDateTime
}

' =========================
' RELATIONS METIER
' =========================
Utilisateur "1" -- "0..*" Publication : publie
Utilisateur "1" -- "0..*" Commentaire : écrit
Utilisateur "1" -- "0..*" Notation
Utilisateur "1" -- "0..*" Favori
Utilisateur "1" -- "0..*" Notification
Utilisateur "1" -- "0..*" Session

Bibliotheque "1" -- "0..*" Horaire
Bibliotheque "1" -- "0..*" Publication
Bibliotheque "1" -- "0..*" Notation
Bibliotheque "1" -- "0..*" Favori
Bibliotheque "1" -- "0..*" Notification

Publication "1" -- "0..*" Commentaire
Commentaire "0..1" -- "0..*" Commentaire : réponses

Bibliotheque --> TypeBibliotheque
Notification --> TypeNotification

@enduml